Moved compose into the endToEnd tests where it belongs for now

--- a/java/endToEnd/build.gradle
+++ b/java/endToEnd/build.gradle
@@ -82,3 +82,14 @@ dependencies {
     implementation libs.jakarta.servlet.api
     implementation libs.javax.servlet.api
 }
+task composeUp(type: Exec) {
+    commandLine "docker", "compose", "up", "--wait"
+}
+task composeDown(type: Exec) {
+    commandLine "docker", "compose", "down"
+}
+
+composeUp.dependsOn ':control:installDist'
+composeUp.dependsOn ':node:installDist'
+test.dependsOn composeUp
+composeDown.shouldRunAfter test
