--- a/java/endToEnd/compose.yaml
+++ b/java/endToEnd/compose.yaml
@@ -43,7 +43,7 @@ services:
     volumes:
       - ../control/build/install/control:/control
       - ./src/test/resources:/config
-      - ./build/docker-log:/tmp/logs
+      - logs:/tmp/logs
     command: ["/control/bin/control", "server", "/config/control-config.yaml"]
     depends_on:
       etcd:
@@ -61,7 +61,7 @@ services:
     volumes:
       - ../node/build/install/node:/node
       - ./src/test/resources:/config
-      - ./build/docker-log:/tmp/logs
+      - logs:/tmp/logs
     command: ["/node/bin/node", "server", "/config/node-config.yaml"]
     depends_on:
       etcd:
@@ -70,6 +70,14 @@ services:
         condition: service_started
       control:
         condition: service_started
+
+volumes:
+  logs:
+    driver: local
+    driver_opts:
+      type: none
+      device: "build/docker-log"
+      o: bind
 
 networks:
   back-tier: {}
