Put back the suite so we could setup a common set of classes

--- a/java/common-javaClient/build.gradle
+++ b/java/common-javaClient/build.gradle
@@ -28,7 +28,7 @@ checkstyle {
 }
 
 dependencies {
-    implementation project(":common")
+    api project(":common")
     implementation libs.guava
 
     implementation libs.javax.inject
