--- a/java/control-javaClient/build.gradle
+++ b/java/control-javaClient/build.gradle
@@ -28,8 +28,8 @@ checkstyle {
 }
 
 dependencies {
-    implementation project(":common")
-    implementation project(":common-javaClient")
+    api project(":common")
+    api project(":common-javaClient")
     implementation project(":control-common")
     implementation project(":node-common")
 
