--- a/java/endToEnd/compose.yaml
+++ b/java/endToEnd/compose.yaml
@@ -33,6 +33,11 @@ services:
       POSTGRES_DB: control
     networks:
       - back-tier
+    healthcheck:
+      test: [ "CMD", "pg_isready", "-q", "-d", "control", "-U", "control" ]
+      timeout: 2s
+      interval: 2s
+      retries: 10
 
   control:
     image: amazoncorretto:17
@@ -49,7 +54,12 @@ services:
       etcd:
         condition: service_started
       database:
-        condition: service_started
+        condition: service_healthy
+    healthcheck:
+      test: curl --fail http://localhost:9091/healthcheck || exit 1
+      timeout: 2s
+      interval: 2s
+      retries: 10
 
   node:
     image: amazoncorretto:17
@@ -66,10 +76,13 @@ services:
     depends_on:
       etcd:
         condition: service_started
-      database:
-        condition: service_started
       control:
-        condition: service_started
+        condition: service_healthy
+    healthcheck:
+      test: curl --fail http://localhost:9081/healthcheck || exit 1
+      timeout: 2s
+      interval: 2s
+      retries: 10
 
 volumes:
   logs:
