Added update to dao to allow for sending tenant resource ranges to etcd. Also fixed up some gradle

--- a/java/control/build.gradle
+++ b/java/control/build.gradle
@@ -23,6 +23,7 @@ configurations {
 checkstyleTest { // ignore checkstyle in tests
     ignoreFailures true
     showViolations false
+    enabled = false
 }
 checkstyle {
     ignoreFailures = false
