--- a/java/build.gradle
+++ b/java/build.gradle
@@ -38,11 +38,21 @@ allprojects {
     apply plugin: 'jacoco'
     apply plugin: 'signing'
     apply plugin: 'maven-publish'
+    apply plugin: 'checkstyle'
     java {
         sourceCompatibility = JavaVersion.VERSION_17
         targetCompatibility = JavaVersion.VERSION_17
         withJavadocJar()
         withSourcesJar()
+    }
+    checkstyleTest { // ignore checkstyle in tests
+        ignoreFailures true
+        showViolations false
+        enabled = false
+    }
+    checkstyle {
+        ignoreFailures = false
+        maxWarnings = 0
     }
     // Ensure we have lint warnings displayed so we can fix or  @SuppressWarnings("unchecked")
     tasks.withType(JavaCompile) {
