--- a/java/settings.gradle
+++ b/java/settings.gradle
@@ -25,8 +25,8 @@ dependencyResolutionManagement {
 
 // All subprojects we want to build.
 include ':common', ':server-common', ':common-javaClient', ":config-common",
-        ':node-common', ':node', ':node-javaClient', 
-        ':control-common', ':control', ':control-javaClient', 
-        ':proxy',
+        ':node-common', ':node-javaClient', ':node',
+        ':control-common', ':control-javaClient', ':control',
+        ':proxy-common', ':proxy-javaClient', ':proxy',
         ':endToEnd'
 
