Added preamble for the etcd accessor since we're looking at using Apache APISIX which also uses etcd

--- a/java/control/src/main/resources/config.yaml
+++ b/java/control/src/main/resources/config.yaml
@@ -3,6 +3,8 @@ logging:
   loggers:
     com.codeheadsystems: DEBUG
     com.codeheadsystems.dstore: TRACE
+    com.codeheadsystems.dstore.control.healthchecks: INFO
+    com.codeheadsystems.dstore.common.config.healthchecks: INFO
     com.mchange.v2.c3p0: WARN
   appenders:
     - type: console
