--- a/java/endToEnd/compose.yaml
+++ b/java/endToEnd/compose.yaml
@@ -39,6 +39,11 @@ services:
       interval: 2s
       retries: 10
 
+  metrics:
+    image: prom/prometheus:latest
+    ports:
+      - 5050:9090
+
   control:
     image: amazoncorretto:17
     ports:
