--- a/java/node/build.gradle
+++ b/java/node/build.gradle
@@ -71,3 +71,8 @@ run {
     args 'server', configPath + 'config.yaml'
     mainClassName = "com.codeheadsystems.dstore.node.Node"
 }
+
+task dockerImage(type: Exec) {
+    commandLine "docker", "build", "-t", "codehead/node:${version}", "."
+}
+dockerImage.dependsOn installDist
