Fixed up unit tests for common

--- a/java/common/build.gradle
+++ b/java/common/build.gradle
@@ -13,6 +13,8 @@ configurations {
     jar.archiveBaseName = "${appName}"
 }
 
+//jacocoTestReport.finalizedBy jacocoTestCoverageVerification  // Require code coverage to pass
+
 dependencies {
     implementation libs.javax.inject
     implementation libs.dagger
