--- a/java/build.gradle
+++ b/java/build.gradle
@@ -135,7 +135,7 @@ allprojects {
         violationRules {
             rule {
                 excludes = excludeFiles
-                element = 'CLASS'
+                element = 'BUNDLE'
                 limit {
                     counter = 'LINE'
                     value = 'COVEREDRATIO'
@@ -144,7 +144,7 @@ allprojects {
             }
             rule {
                 excludes = excludeFiles
-                element = 'CLASS'
+                element = 'BUNDLE'
                 limit {
                     counter = 'BRANCH'
                     value = 'COVEREDRATIO'
