Moved etcd configuration into the server-common and created a stage tag we can use for configuration module

--- a/java/server-common/build.gradle
+++ b/java/server-common/build.gradle
@@ -16,6 +16,7 @@ configurations {
 //jacocoTestReport.finalizedBy jacocoTestCoverageVerification
 
 dependencies {
+    api project(":config-common")
     implementation project(":common")
 
     implementation libs.dropwizard.auth
