--- a/java/endToEnd/src/test/resources/node-config.yaml
+++ b/java/endToEnd/src/test/resources/node-config.yaml
@@ -10,6 +10,7 @@ logging:
     org.svarm.node.healthchecks: INFO
     org.svarm.common.config.healthchecks: INFO
     com.mchange.v2.c3p0: WARN
+    org.eclipse.jetty.server.HttpChannel: ERROR
   appenders:
     - type: console
       logFormat: "%d{HH:mm:ss.SSS} [%thread] [trace:%X{trace}] %-5level %logger{36} - %msg%n"
