Upgraded to DropWizard 4.0 (beta)

--- a/java/config-common/build.gradle
+++ b/java/config-common/build.gradle
@@ -18,10 +18,10 @@ configurations {
 dependencies {
     implementation project(":common")
 
-    implementation libs.dropwizard.auth
-    implementation libs.dropwizard.core
-    implementation libs.dropwizard.jackson
-    implementation libs.dropwizard.metrics.graphite
+    implementation libs.dropwizard4.auth
+    implementation libs.dropwizard4.core
+    implementation libs.dropwizard4.jackson
+    implementation libs.dropwizard4.metrics.graphite
     implementation libs.micrometer.core
     implementation libs.metrics.core
 
@@ -34,7 +34,6 @@ dependencies {
     implementation libs.logback.classic
     implementation libs.logback.core
     implementation libs.logback.access
-    implementation libs.jakarta.servlet.api
-    implementation libs.javax.servlet.api
+
 }
 
