--- a/java/node-common/build.gradle
+++ b/java/node-common/build.gradle
@@ -18,10 +18,10 @@ dependencies {
     implementation project(":common")
     implementation libs.guava
 
-    implementation libs.dropwizard.auth
-    implementation libs.dropwizard.core
-    implementation libs.dropwizard.jackson
-    implementation libs.dropwizard.metrics.graphite
+    implementation libs.dropwizard4.auth
+    implementation libs.dropwizard4.core
+    implementation libs.dropwizard4.jackson
+    implementation libs.dropwizard4.metrics.graphite
 
 
     testImplementation libs.jackson.dataformat.yaml
@@ -31,6 +31,5 @@ dependencies {
     implementation libs.logback.classic
     implementation libs.logback.core
     implementation libs.logback.access
-    implementation libs.jakarta.servlet.api
-    implementation libs.javax.servlet.api
+
 }
