--- a/java/proxy-javaClient/build.gradle
+++ b/java/proxy-javaClient/build.gradle
@@ -23,9 +23,9 @@ dependencies {
     implementation libs.jackson.core
     implementation libs.jackson.databind
     implementation libs.jackson.datatype.jdk8
-    implementation libs.dropwizard.auth
-    implementation libs.dropwizard.core
-    implementation libs.dropwizard.jackson
+    implementation libs.dropwizard4.auth
+    implementation libs.dropwizard4.core
+    implementation libs.dropwizard4.jackson
     implementation libs.micrometer.core
     implementation libs.metrics.core
 
@@ -35,6 +35,7 @@ dependencies {
     implementation libs.feign.micrometer
     implementation libs.openfeign.java11
     implementation libs.openfeign.jaxrs2
+    implementation libs.openfeign.jakarta
 
     implementation libs.retrofit
     implementation libs.retrofit2.converter.jackson
@@ -43,6 +44,5 @@ dependencies {
     implementation libs.logback.classic
     implementation libs.logback.core
     implementation libs.logback.access
-    implementation libs.jakarta.servlet.api
-    implementation libs.javax.servlet.api
+
 }
